[project]
name = "nexus"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.5.7",
    "langchain-core>=1.2.28",
    "langgraph>=1.1.6",
    "python-dotenv>=1.2.2",
    "python-telegram-bot>=22.7",
    "streamlit>=1.56.0",
    "tavily-python>=0.7.23",
]
